<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:background="#8AB6EC"-->
        <!--&gt;-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="本地视频"-->
            <!--android:textSize="18sp"-->
            <!--android:textColor="#272727"-->
            <!--android:layout_centerInParent="true"-->
            <!--/>-->
        <!--<LinearLayout-->
            <!--android:id="@+id/ll_local_fragment_title_right"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:visibility="gone"-->
            <!--&gt;-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="全选"-->
                <!--android:textSize="18sp"-->
                <!--android:textColor="#272727"-->
                <!--/>-->
        <!--</LinearLayout>-->
    <!--</RelativeLayout>-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/tv_local_no_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/local_no_content"
            android:textSize="20sp"
            android:textColor="#dedede"
            android:gravity="center"
            />
    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gv_local_fragemnt"
        android:numColumns="3"
        android:horizontalSpacing="10dp"
        android:verticalSpacing="5dp"
        android:paddingTop="5dp"
        android:listSelector="@android:color/transparent"
        android:visibility="gone"
        />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center|bottom"
        android:background="#8AB6EC"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tv_local_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_str"
            android:textSize="18sp"
            android:textColor="#d11046"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/tv_local_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_local"
            android:textSize="18sp"
            android:textColor="#284bab"
            android:layout_marginLeft="30dp"
            />
        <TextView
            android:id="@+id/tv_local_check_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_all_local"
            android:textSize="18sp"
            android:textColor="#8c23b6"
            android:layout_marginLeft="30dp"
            />
    </LinearLayout>
</LinearLayout>