<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#8AB6EC"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="40dp">

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/search_edit"
            android:hint="@string/search_hint_string"
            android:textColorHint="#999999"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="40dp">
        <ImageView
            android:id="@+id/iv_home_fragment_search"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/search_iv_str"
            android:src="@mipmap/search" />
            <TextView
                android:id="@+id/tv_home_fragment_search_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#272727"
                android:text="@string/cancel"
                android:layout_gravity="center"
                android:visibility="gone"
                />
        </FrameLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fl_home_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/ll_home_fragment_tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TabLayout
                android:id="@+id/home_fragment_tab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fff"
                app:tabIndicatorColor="#FFFA3D3D"
                app:tabIndicatorHeight="2dp"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="#FFFA3D3D"
                app:tabTextColor="#474747" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#d0d0d0" />

            <com.android.deak.videoplayer.widget.NoScrollViewPager
                android:id="@+id/fragment_pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>

