<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_video_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#FF6B4EFC"
        android:gravity="center"
        android:textColor="#fefefe"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="226dp">

                <io.vov.vitamio.widget.VideoView
                    android:id="@+id/video_view"
                    android:layout_width="match_parent"
                    android:layout_height="226dp"
                    android:fadingEdge="none"
                    android:visibility="gone" />
                <!--<ImageView-->
                    <!--android:layout_width="32dp"-->
                    <!--android:layout_height="32dp"-->
                    <!--android:id="@+id/iv_video_activity_loading"-->
                    <!--android:src="@mipmap/loading_play"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:visibility="gone"-->
                    <!--/>-->
                <!--<TextView-->
                    <!--android:id="@+id/tv_video_activity_loading"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_below="@id/iv_video_activity_loading"-->
                    <!--android:text="@string/video_play_loading"-->
                    <!--android:textColor="#989898"-->
                    <!--android:textSize="14sp"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:visibility="gone"-->
                    <!--/>-->
                <ImageView
                    android:id="@+id/iv_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#a9a9a9" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_video_collect"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/video_collect"
                    android:textColor="#272727"
                    android:background="@drawable/btn_collect_bg"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#a9a9a9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/intro_string"
                android:textColor="#272727"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_video_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text=""
                android:textColor="#272727"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#a9a9a9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/episode_string"
                android:textColor="#272727"
                android:textSize="16sp" />

            <com.android.deak.videoplayer.widget.MyCardGridView
                android:id="@+id/gv_activity_video_number"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:horizontalSpacing="10dp"
                android:numColumns="8"
                android:verticalSpacing="10dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>